# blog_fastapi

./: README.md  banco.db  crud.py  database.py  exit  main.py  models.py  pyproject.toml  render.yaml  run.py  schemas.py
routers/: contas.py  schemas.py  usuarios.py
