[tool.poetry]
name = "blog_fastapi"
version = "0.1.0"
description = "API de exemplo FastAPI com SQLModel"
authors = ["Fabiano <email@exemplo.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.114"
uvicorn = { extras = ["standard"], version = "^0.23" }
sqlmodel = "^0.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
