[tool.poetry]
name = "blog_fastapi"
version = "0.1.0"
description = "API de exemplo FastAPI com SQLModel"
authors = ["Fabiano <email@exemplo.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
sqlmodel = "^0.0.16"
psycopg = { extras = ["binary"], version = "^3.1" }
psycopg2 = { version = "^2.9", extras = ["binary"] }

python-dotenv = "^1.0"
pydantic = "^2.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
